--- a/FrontEnd/src/app/banner-page/pages/home/home.component.html
+++ b/FrontEnd/src/app/banner-page/pages/home/home.component.html
@@ -69,7 +69,7 @@
         <a
           routerLink="/login"
           class="text-base leading-6 bg-slate-700 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded-full"
-          >Preview <span aria-hidden="true">&rarr;</span></a
+          >Preview of application <span aria-hidden="true">&rarr;</span></a
         >
       </div>
       <!-- *main menu ends -->
@@ -90,7 +90,7 @@
       >
         <div class="flex items-center justify-between">
           <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">Class Trackr</span>
+            <span class="sr-only">ClassTrackr</span>
             <img
               class="h-8 w-auto"
               src="assets/images/classtrackr-logo2.png"
@@ -196,11 +196,11 @@
           <h1
             class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl"
           >
-            Take Control of Your Academic Journey
+            Parents-Teacher communication platform
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-600">
-            Manage Your Time, Stay Organized, and Reach Your Goals with Our
-            Comprehensive School Diary Website
+            This ClassTrackr application help to maintain a relation between
+            parents and teachers using it's advanced features.
           </p>
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a
