--- a/src/app/banner-page/pages/home/home.component.html
+++ b/src/app/banner-page/pages/home/home.component.html
@@ -196,7 +196,7 @@
           <h1
             class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl"
           >
-            Parents-Teacher communication platform
+            Parents & Teacher communication platform
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-600">
             This ClassTrackr application help to maintain a relation between
