--- a/src/app/banner-page/pages/home/home.component.html
+++ b/src/app/banner-page/pages/home/home.component.html
@@ -199,7 +199,7 @@
             Parents & Teacher communication platform
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-600">
-            This ClassTrackr application help to maintain a relation between
+            This CLASSTRACKR application help to maintain a relation between
             parents and teachers using it's advanced features.
           </p>
           <div class="mt-10 flex items-center justify-center gap-x-6">
