--- a/FrontEnd/src/app/banner-page/pages/home/home.component.html
+++ b/FrontEnd/src/app/banner-page/pages/home/home.component.html
@@ -12,7 +12,7 @@
     >
       <div class="flex lg:flex-1">
         <a routerLink="/" class="-m-1.5 p-1.5">
-          <span class="sr-only">ClassTrackr</span>
+          <span class="sr-only">ClASSTRACKR</span>
           <img
             class="h-24 w-auto"
             src="assets/images/logo-designed.png"
@@ -90,7 +90,7 @@
       >
         <div class="flex items-center justify-between">
           <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">ClassTrackr</span>
+            <span class="sr-only">ClASSTRACKR</span>
             <img
               class="h-8 w-auto"
               src="assets/images/classtrackr-logo2.png"
@@ -140,14 +140,16 @@
               <a
                 (click)="scroll(contact)"
                 class="-mx-3 block rounded-lg py-2 px-3 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                >Contact</a
+                >Contact us</a
               >
             </div>
             <div class="py-6">
               <a
                 routerLink="/login"
                 class="text-base leading-6 bg-slate-700 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded-full"
-                >Preview <span aria-hidden="true">&rarr;</span></a
+                >Sign in (registered users only)<span aria-hidden="true"
+                  >&rarr;</span
+                ></a
               >
             </div>
           </div>
@@ -199,8 +201,9 @@
             Parents & Teacher communication platform
           </h1>
           <p class="mt-6 text-lg leading-8 text-gray-600">
-            This CLASSTRACKR application help to maintain a relation between
-            parents and teachers using it's advanced features.
+            The CLASSTRACKR application help to maintain a close relationship
+            between parents and teachers of nursey/reception level children
+            through it's various features.
           </p>
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a
@@ -4624,11 +4627,14 @@
       <p
         class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"
       >
-        Stay Organized and on Top of Your Schoolwork
+        Parent get to know the updates regarding your child's day at school and
+        teachers can easily share
       </p>
       <p class="mt-6 text-lg leading-8 text-gray-600">
-        Our School Diary Website Comes Loaded with Features to Help You Manage
-        Your Time, Stay on Track, and Succeed in Your Studies
+        Our CLASSTRACKR Website Comes Loaded with Features to Help teachers to
+        share the important informations which needed to communicate with
+        parents and parents with that get to know about their child's day at
+        school easily.
       </p>
     </div>
     <div class="mx-auto mt-16 max-w-2xl sm:mt-20 lg:mt-24 lg:max-w-4xl">
