--- a/FrontEnd/src/app/dashboard/pages/pupils/add-remarks/add-remarks.component.html
+++ b/FrontEnd/src/app/dashboard/pages/pupils/add-remarks/add-remarks.component.html
@@ -1,33 +1,35 @@
+<div
+  class="relative flex justify-center bg-slate-400 h-screen rounded-xl p-16 shadow dark:bg-gray-700"
+>
+  <div class="px-6 py-6 lg:px-8 w-3/6">
+    <h3
+      class="mb-4 text-xl text-center font-medium text-gray-900 dark:text-white"
+    >
+      Write remark
+    </h3>
+    <form
+      class="space-y-6"
+      [formGroup]="remarkForm"
+      (ngSubmit)="remarksSubmit()"
+    >
+      <div>
+        <textarea
+          type="text"
+          formControlName="remark"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+          placeholder="Write here..."
+          required
+        ></textarea>
+      </div>
 
-<div class="relative flex justify-center  bg-slate-400 h-screen rounded-xl p-16 shadow dark:bg-gray-700">
-      
-    <div class="px-6 py-6 lg:px-8 w-3/6">
-      <h3
-        class="mb-4 text-xl text-center font-medium text-gray-900 dark:text-white"
-      >
-        Write remark
-      </h3>
-      <form
-        class="space-y-6"
-        [formGroup]="remarkForm"
-        (ngSubmit)="remarksSubmit()"
-      >
-        <div>
-          <textarea
-            type="text"
-            formControlName="remark"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
-            placeholder="Write here..."
-            required
-          ></textarea>
-        </div>
+      <input id="file-upload" type="file" name="file" (change)="pdf($event)" />
 
-        <button
-          type="submit"
-          class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
-          Sent
-        </button>
-      </form>
-    </div>
+      <button
+        type="submit"
+        class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      >
+        Sent
+      </button>
+    </form>
   </div>
+</div>
