--- a/FrontEnd/src/app/dashboard/pages/teachers/teachers-form/teachers-form.component.html
+++ b/FrontEnd/src/app/dashboard/pages/teachers/teachers-form/teachers-form.component.html
@@ -7,7 +7,7 @@
     <h3
       class="block py-3 uppercase tracking-wide text-gray-700 text-3xl font-bold mb-2"
     >
-      EDIT DETAILS
+      ADD DETAILS
     </h3>
   </div>
   <!-- Modal body -->
@@ -139,51 +139,8 @@
             class="mt-1 text-sm text-gray-500 dark:text-gray-300"
             id="file_input_help"
           >
-            {{ imgName }}
+            SVG, PNG, JPG or GIF (MAX. 800x400px).
           </p>
-        </div>
-      </div>
-
-      <!-- *next section  -->
-      <label
-        class="block py-5 uppercase tracking-wide text-gray-700 text-lg font-bold mb-2"
-        for="grid-password"
-      >
-        Parent guardian Info
-      </label>
-      <hr />
-
-      <!-- *parent name  contact  -->
-      <div class="flex flex-wrap -mx-3 mb-6">
-        <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
-          <label
-            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 required"
-            for="grid-first-name"
-          >
-            Name
-          </label>
-          <input
-            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-            id="grid-first-name"
-            type="text"
-            placeholder="Jane"
-            formControlName="parentName"
-          />
-        </div>
-        <div class="w-full md:w-1/2 px-3">
-          <label
-            class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 required"
-            for="grid-last-name"
-          >
-            Contact number
-          </label>
-          <input
-            class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-            id="grid-last-name"
-            type="text"
-            placeholder="Doe"
-            formControlName="parentPhoneNumber"
-          />
         </div>
       </div>
 
