--- a/FrontEnd/src/app/dashboard/units/sidebar/sidebar.component.html
+++ b/FrontEnd/src/app/dashboard/units/sidebar/sidebar.component.html
@@ -34,7 +34,7 @@
           />
           <span
             class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
-            >Class Trackr school</span
+            >CLASSTRACKR</span
           >
         </a>
       </div>
@@ -129,7 +129,7 @@
             />
           </svg>
 
-          <span class="flex-1 ml-3 whitespace-nowrap">Pupils</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">Students</span>
         </a>
       </li>
       <li *ngIf="!isAuthorized()">
@@ -152,7 +152,7 @@
             />
           </svg>
 
-          <span class="flex-1 ml-3 whitespace-nowrap">My Account</span>
+          <span class="flex-1 ml-3 whitespace-nowrap">My Profile</span>
         </a>
       </li>
 
