--- a/src/app/banner-page/pages/home/home.component.html
+++ b/src/app/banner-page/pages/home/home.component.html
@@ -46,32 +46,8 @@
       </div>
       <!-- *hamburg ends -->
       <!-- *main menu starts -->
-      <div class="hidden lg:flex lg:gap-x-12">
-        <a
-          (click)="scroll(features)"
-          class="text-base font-semibold leading-6 text-gray-900"
-          >Features</a
-        >
-
-        <a
-          (click)="scroll(price)"
-          class="text-base font-semibold leading-6 text-gray-900"
-          >Pricing</a
-        >
-
-        <a
-          (click)="scroll(contact)"
-          class="text-base font-semibold leading-6 text-gray-900"
-          >Contact</a
-        >
-      </div>
-      <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-        <a
-          routerLink="/login"
-          class="text-base leading-6 bg-slate-700 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded-full"
-          >Preview of application <span aria-hidden="true">&rarr;</span></a
-        >
-      </div>
+      <div class="hidden lg:flex lg:gap-x-12"></div>
+      <div class="hidden lg:flex lg:flex-1 lg:justify-end"></div>
       <!-- *main menu ends -->
     </nav>
     <!-- *nav ends -->
@@ -209,13 +185,8 @@
             <a
               routerLink="/login"
               class="text-base leading-6 bg-slate-700 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded-full"
-              >Preview
+              >SIGN IN NOW <span aria-hidden="true">→</span>
             </a>
-            <a
-              class="text-sm font-semibold leading-6 text-gray-900"
-              (click)="scroll(contact)"
-              >Contact <span aria-hidden="true">→</span></a
-            >
           </div>
         </div>
         <!-- *banner hero image in svg -->
@@ -9397,48 +9368,9 @@
 <!-- trusted numbers  -->
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <h2 class="text-centertext-lg font-semibold leading-8 text-gray-900">
-      Trusted by the world’s premier institutes
-    </h2>
     <div
       class="mx-auto mt-10 grid max-w-lg grid-cols-4 items-center gap-x-8 gap-y-10 sm:max-w-xl sm:grid-cols-6 sm:gap-x-10 lg:mx-0 lg:max-w-none lg:grid-cols-5"
-    >
-      <img
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-        src="https://tailwindui.com/img/logos/158x48/transistor-logo-gray-900.svg"
-        alt="Transistor"
-        width="158"
-        height="48"
-      />
-      <img
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-        src="https://tailwindui.com/img/logos/158x48/reform-logo-gray-900.svg"
-        alt="Reform"
-        width="158"
-        height="48"
-      />
-      <img
-        class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
-        src="https://tailwindui.com/img/logos/158x48/tuple-logo-gray-900.svg"
-        alt="Tuple"
-        width="158"
-        height="48"
-      />
-      <img
-        class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1"
-        src="https://tailwindui.com/img/logos/158x48/savvycal-logo-gray-900.svg"
-        alt="SavvyCal"
-        width="158"
-        height="48"
-      />
-      <img
-        class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1"
-        src="https://tailwindui.com/img/logos/158x48/statamic-logo-gray-900.svg"
-        alt="Statamic"
-        width="158"
-        height="48"
-      />
-    </div>
+    ></div>
   </div>
 </div>
 
@@ -9548,7 +9480,7 @@
         </svg>
       </a>
       <a href="#" class="text-gray-400 hover:text-gray-500">
-        <span class="sr-only">ClassTrackr</span>
+        <span class="sr-only">CLASSTRACKR</span>
         <svg
           class="w-6 h-6"
           aria-hidden="true"
