--- a/src/app/dashboard/pages/teachers/teachers-list/teachers-list.component.html
+++ b/src/app/dashboard/pages/teachers/teachers-list/teachers-list.component.html
@@ -2,7 +2,7 @@
   <h1
     class="mb-4 text-xl text-center font-bold leading-none tracking-tight text-white md:text-3xl lg:text-5xl dark:text-white"
   >
-    Pupils
+    Teachers list
   </h1>
 
   <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
