--- a/FrontEnd/src/app/banner-page/pages/home/home.component.html
+++ b/FrontEnd/src/app/banner-page/pages/home/home.component.html
@@ -4619,25 +4619,23 @@
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
                 fill="white"
-                class="bi bi-clock"
-                viewBox="0 0 16 16"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="white"
+                class="w-6 h-6"
               >
                 <path
-                  d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"
-                />
-                <path
-                  d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.076-4.076a1.526 1.526 0 011.037-.443 48.282 48.282 0 005.68-.494c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"
                 />
               </svg>
             </div>
-            Timetable
+            Chat option
           </dt>
           <dd class="mt-2 text-base leading-7 text-gray-600">
-            A visual timetable of classes, subjects, and teachers, with the
-            ability to customize and update your schedule as needed.
+            Teachers and parents can have a chat through this platform
           </dd>
         </div>
 
@@ -4648,28 +4646,23 @@
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
                 fill="white"
-                class="bi bi-house-gear-fill"
-                viewBox="0 0 16 16"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="white"
+                class="w-6 h-6"
               >
                 <path
-                  d="M7.293 1.5a1 1 0 0 1 1.414 0L11 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l2.354 2.353a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5Z"
-                />
-                <path
-                  d="M11.07 9.047a1.5 1.5 0 0 0-1.742.26l-.02.021a1.5 1.5 0 0 0-.261 1.742 1.5 1.5 0 0 0 0 2.86 1.504 1.504 0 0 0-.12 1.07H3.5A1.5 1.5 0 0 1 2 13.5V9.293l6-6 4.724 4.724a1.5 1.5 0 0 0-1.654 1.03Z"
-                />
-                <path
-                  d="m13.158 9.608-.043-.148c-.181-.613-1.049-.613-1.23 0l-.043.148a.64.64 0 0 1-.921.382l-.136-.074c-.561-.306-1.175.308-.87.869l.075.136a.64.64 0 0 1-.382.92l-.148.045c-.613.18-.613 1.048 0 1.229l.148.043a.64.64 0 0 1 .382.921l-.074.136c-.306.561.308 1.175.869.87l.136-.075a.64.64 0 0 1 .92.382l.045.149c.18.612 1.048.612 1.229 0l.043-.15a.64.64 0 0 1 .921-.38l.136.074c.561.305 1.175-.309.87-.87l-.075-.136a.64.64 0 0 1 .382-.92l.149-.044c.612-.181.612-1.049 0-1.23l-.15-.043a.64.64 0 0 1-.38-.921l.074-.136c.305-.561-.309-1.175-.87-.87l-.136.075a.64.64 0 0 1-.92-.382ZM12.5 14a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M10.34 15.84c-.688-.06-1.386-.09-2.09-.09H7.5a4.5 4.5 0 110-9h.75c.704 0 1.402-.03 2.09-.09m0 9.18c.253.962.584 1.892.985 2.783.247.55.06 1.21-.463 1.511l-.657.38c-.551.318-1.26.117-1.527-.461a20.845 20.845 0 01-1.44-4.282m3.102.069a18.03 18.03 0 01-.59-4.59c0-1.586.205-3.124.59-4.59m0 9.18a23.848 23.848 0 018.835 2.535M10.34 6.66a23.847 23.847 0 008.835-2.535m0 0A23.74 23.74 0 0018.795 3m.38 1.125a23.91 23.91 0 011.014 5.395m-1.014 8.855c-.118.38-.245.754-.38 1.125m.38-1.125a23.91 23.91 0 001.014-5.395m0-3.46c.495.413.811 1.035.811 1.73 0 .695-.316 1.317-.811 1.73m0-3.46a24.347 24.347 0 010 3.46"
                 />
               </svg>
             </div>
-            Homework Assignments
+            Announcements
           </dt>
           <dd class="mt-2 text-base leading-7 text-gray-600">
-            A section for noting down homework assignments, due dates, and the
-            ability to mark assignments as completed.
+            Various announcements can be posted through this platform
           </dd>
         </div>
 
@@ -4696,11 +4689,11 @@
                 />
               </svg>
             </div>
-            Exam Dates
+            Individual remarks
           </dt>
           <dd class="mt-2 text-base leading-7 text-gray-600">
-            A list of upcoming exams and their dates, with the ability to set
-            reminders and get notifications.
+            Teacher can post remarks about a particular child and parent can
+            view that
           </dd>
         </div>
 
@@ -4728,11 +4721,10 @@
                 />
               </svg>
             </div>
-            Events
+            Calendar
           </dt>
           <dd class="mt-2 text-base leading-7 text-gray-600">
-            A calendar of school events like sports day, cultural festivals, and
-            other extracurricular activities.
+            A calendar facility to save the upcoming events
           </dd>
         </div>
       </dl>
@@ -4770,18 +4762,17 @@
         class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2 class="text-3xl font-bold tracking-tight text-white sm:text-4xl">
-          Get Organized.<br />Start your Academic journey today.
+          Get connected<br />Start your classtrackr journey today
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-300">
-          Experience the Ultimate Academic Planner
+          Easy to communicate with parents and teachers
         </p>
         <div
           class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
         >
           <a
-            (click)="scroll(contact)"
             class="rounded-md bg-white px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
-            >Get started</a
+            >Start now</a
           >
         </div>
       </div>
@@ -9239,25 +9230,15 @@
 <!-- pricing  -->
 <div #price class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl sm:text-center">
-      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-        Affordable Pricing to Help You Succeed
-      </h2>
-      <p class="mt-6 text-lg leading-8 text-gray-600">
-        Our One Plan Offers Comprehensive Features and Maximum Value for Your
-        Academic Journey
-      </p>
-    </div>
+    <div class="mx-auto max-w-2xl sm:text-center"></div>
     <div
       class="mx-auto mt-16 max-w-2xl rounded-3xl ring-1 ring-gray-200 sm:mt-20 lg:mx-0 lg:flex lg:max-w-none"
     >
       <div class="p-8 sm:p-10 lg:flex-auto">
         <h3 class="text-2xl font-bold tracking-tight text-gray-900">
-          Lifetime membership
+          Other services
         </h3>
-        <p class="mt-6 text-base leading-7 text-gray-600">
-          Unlock Your Potential with Our Lifetime Subscription
-        </p>
+
         <div class="mt-10 flex items-center gap-x-4">
           <h4 class="flex-none text-sm font-semibold leading-6 text-indigo-600">
             What’s included
@@ -9281,7 +9262,7 @@
                 clip-rule="evenodd"
               />
             </svg>
-            One year Free Service
+            Free Service
           </li>
 
           <li class="flex gap-x-3">
@@ -9332,34 +9313,6 @@
             Free Deployment service
           </li>
         </ul>
-      </div>
-      <div class="-mt-2 p-2 lg:mt-0 lg:w-full lg:max-w-md lg:flex-shrink-0">
-        <div
-          class="rounded-2xl bg-gray-50 py-10 text-center ring-1 ring-inset ring-gray-900/5 lg:flex lg:flex-col lg:justify-center lg:py-16"
-        >
-          <div class="mx-auto max-w-xs px-8">
-            <p class="text-base font-semibold text-gray-600">
-              Pay once, own it forever
-            </p>
-            <p class="mt-6 flex items-baseline justify-center gap-x-2">
-              <span class="text-5xl font-bold tracking-tight text-gray-900"
-                >$499</span
-              >
-              <span
-                class="text-sm font-semibold leading-6 tracking-wide text-gray-600"
-                >USD</span
-              >
-            </p>
-            <a
-              href="#"
-              class="mt-10 block w-full rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-              >Get access</a
-            >
-            <p class="mt-6 text-xs leading-5 text-gray-600">
-              Invoices and receipts available for easy company reimbursement
-            </p>
-          </div>
-        </div>
       </div>
     </div>
   </div>
